MangoBajito/tests/Lenguajes_2/Operacion/errors/02-multiplicacion.mng
# Test 02: Error de operacion multiplicacion.
se_prende(){
	culito n0 : mango = 8 * 2.3;
	culito n1 : mango = 8 * 1.32e+200;
	culito n2 : mango = 8 * 'c';
	culito n3 : mango = 8 * "hola";
	culito n4 : mango = 8 * Sisa;
	culito n5 : mango = 8 * 2.3 * 1.2e+100;
};